# textbook-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: static.yml
datastory/: PROMPT.md  index.html  report.md
src/: __init__.py  pdf_processor.py  verifier.py
src/tools/: __init__.py  google_search.py  web_crawler.py
